opam-version: "1.2"
maintainer: "levimroth@gmail.com"
authors: ["Levi Roth"]
homepage: "https://github.com/leviroth/ppx_constr_test"
bug-reports: "https://github.com/leviroth/ppx_constr_test/issues"
dev-repo: "git+https://github.com/leviroth/ppx_constr_test.git"
license: "MIT"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]

depends: [
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
